--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-moment": "^1.1.3",
